tests/NormalTests/paczka2/big_fuzzy/48698362.err
Error in line 1: yeisfov A115 59,8
Error in line 6: yeisfov S470 88,1
Error in line 19: Rz98 S470 93,4
Error in line 3: JR66IbfFf S470 61,7
Error in line 22: Rz98 A115 57,9
Error in line 27: JR66IbfFf A115 2,5
Error in line 36: WTYnvuatzv S254 14,5
Error in line 26: yeisfov S470 298,6
Error in line 56: WTYnvuatzv S254 33,1
Error in line 54: yeisfov S254 62,1
Error in line 67: 28XpMN S108 06,0
Error in line 66: JR66IbfFf S108 51,9
Error in line 75: 28XpMN S254 35,i
Error in line 60: Rz98 S254 84,6
Error in line 77: Rz98 S470 51,1
Error in line 85: S470 S254 22,24
Error in line 82: S470 S254 6,2
Error in line 53: 28XpMN S108 2,2
Error in line 99: ZoMEpmvi6V A115 158,10
Error in line 98: S470 S470 98,6
Error in line 101: JR66IbfFf S470 85,7
Error in line 97: yeisfov S470 12,1
Error in line 108: S470 S108 343,0
Error in line 115: 28XpMN S108 75,9
Error in line 112: Rz98 A115 28,2
Error in line 113: yeisfov S108 34,5
Error in line 135: yeisfov S470 40,0
Error in line 137: JR66IbfFf S108 13,9
Error in line 92: ZoMEpmvi6V A115 45,8
Error in line 145: WTYnvuatzv S108 44,9
Error in line 155: WTYnvuatzv S254 76,36
Error in line 144: Rz98 S108 34,8
Error in line 157: Rz98 S470 0,7
Error in line 172: S470 S254 49,6
Error in line 175: S470 S108 40,1
Error in line 169: ZoMEpmvi6V S108 57,6
Error in line 171: WTYnvuatzv S254 35,8
Error in line 186: WTYnvuatzv S108 542,4
Error in line 196: yeisfov S470 -2,2
Error in line 198: ZoMEpmvi6V S108 90,4
Error in line 191: yeisfov S470 90,3
Error in line 203: JR66IbfFf A115 3,0
Error in line 211: S470 S108 78,8
Error in line 217: Rz98 A115 27,3
Error in line 218: S470 S254 28,3
Error in line 220: WTYnvuatzv A115 47,2
Error in line 228: Rz98 S254 20,9
Error in line 229: S470 S470 5,1
Error in line 231: Rz98 S108 75,4
Error in line 236: yeisfov A115 17,1
